--- a/front_end/add_activity.html
+++ b/front_end/add_activity.html
@@ -3,134 +3,114 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FitTrack - Log Workout</title>
+    <title>FitTrack - Add Workout</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
-        body {
-            background: #f8f9fa;
-            font-family: 'Arial', sans-serif;
-        }
-        .header {
-            background: white;
-            padding: 20px;
-            text-align: center;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
-        .logo {
-            font-size: 32px;
-            font-weight: bold;
-            color: #007bff;
-        }
-        .logo span {
-            color: #28a745;
-        }
-        .form-container {
-            margin: 20px;
-        }
-        .btn-log {
-            background: #ff8c00;
-            border: none;
-            border-radius: 50px;
-            font-weight: bold;
-        }
-        .bottom-nav {
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            background: white;
-            box-shadow: 0 -2px 10px rgba(0,0,0,0.1);
-            padding: 10px 0;
-        }
-        .bottom-nav a {
-            color: #6c757d;
-            text-decoration: none;
-            font-size: 12px;
-        }
-        .bottom-nav a.active {
-            color: #007bff;
-        }
-        .bottom-nav i {
-            font-size: 24px;
-        }
+        body { background: #f8f9fa; min-height: 100vh; display: flex; flex-direction: column; }
+        .header { background: white; padding: 20px; text-align: center; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
+        .logo { font-size: 32px; font-weight: bold; color: #007bff; }
+        .logo span { color: #28a745; }
+        .main-content { flex: 1; padding-bottom: 70px; }
+        .form-card { background: white; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); padding: 30px; }
+
+        /* Bottom Nav & Sidebar */
+        .bottom-nav { position: fixed; bottom: 0; width: 100%; background: white; box-shadow: 0 -2px 10px rgba(0,0,0,0.1); padding: 10px 0; z-index: 1000; }
+        .bottom-nav a { color: #6c757d; text-decoration: none; font-size: 12px; }
+        .bottom-nav a.active { color: #007bff; }
+        .bottom-nav i { font-size: 24px; }
+
+        .sidebar { width: 250px; background: white; height: 100vh; position: fixed; left: 0; top: 0; padding-top: 100px; box-shadow: 2px 0 10px rgba(0,0,0,0.1); }
+        .sidebar a { display: block; padding: 15px 20px; color: #6c757d; text-decoration: none; font-size: 16px; }
+        .sidebar a.active { background: #e2f1ff; color: #007bff; border-left: 4px solid #007bff; }
+        .sidebar i { margin-right: 10px; }
+
+        @media (max-width: 767px) { .sidebar { display: none; } .main-content { margin-left: 0; padding: 20px; } }
+        @media (min-width: 768px) { .bottom-nav { display: none; } .main-content { margin-left: 250px; padding: 40px; } .form-card { max-width: 600px; margin: 0 auto; } }
+        @media (min-width: 1200px) { .main-content { padding: 60px; } }
     </style>
 </head>
 <body>
 
-    <!-- Header -->
-    <div class="header">
-        <div class="logo">Fit<span>✔</span>Track</div>
-        <h4>Log Workout</h4>
+    <!-- Sidebar (Desktop) -->
+    <div class="sidebar d-none d-md-block">
+        <div class="text-center mb-5">
+            <img src="https://placehold.co/100x100" alt="Profile" class="rounded-circle mb-3" width="100">
+            <h5>DAVID MUSYOKA</h5>
+            <p>DAVIDNGUMBAU29@GMAIL.COM</p>
+        </div>
+        <a href="index.html"><i class="fas fa-home"></i> Home</a>
+        <a href="progress.html"><i class="fas fa-chart-line"></i> Progress</a>
+        <a href="add_activity.html" class="active"><i class="fas fa-dumbbell"></i> Workouts</a>
+        <a href="profile.html"><i class="fas fa-user"></i> Profile</a>
     </div>
 
-    <!-- Form -->
-    <div class="form-container">
-        <form id="workoutForm">
-            <div class="mb-3">
-                <label class="form-label">Date</label>
-                <input type="date" id="date" class="form-control" required>
+    <!-- Main Content -->
+    <div class="main-content">
+        <!-- Mobile Header -->
+        <div class="header d-md-none">
+            <div class="logo">Fit<span>✔</span>Track</div>
+            <h4>Add Workout</h4>
+        </div>
+
+        <div class="container">
+            <div class="form-card">
+                <h3 class="text-center mb-4">Log New Activity</h3>
+                <form id="addActivityForm">
+                    <div class="mb-3">
+                        <label class="form-label">Activity Type</label>
+                        <select class="form-select form-select-lg" required>
+                            <option>Running</option>
+                            <option>Cycling</option>
+                            <option>Weightlifting</option>
+                            <option>Yoga</option>
+                            <option>Swimming</option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Duration (minutes)</label>
+                        <input type="number" class="form-control form-control-lg" placeholder="e.g., 45" required>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Distance (km)</label>
+                        <input type="number" step="0.1" class="form-control form-control-lg" placeholder="e.g., 5.5">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Date</label>
+                        <input type="date" class="form-control form-control-lg" required>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Notes</label>
+                        <textarea class="form-control" rows="3" placeholder="How did it feel?"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-lg w-100">Save Workout</button>
+                </form>
             </div>
-            <div class="mb-3">
-                <label class="form-label">Type of Exercise</label>
-                <select id="type" class="form-select" required>
-                    <option>Running</option>
-                    <option>Cycling</option>
-                    <option>Swimming</option>
-                    <option>Gym</option>
-                    <option>Walking</option>
-                    <option>Other</option>
-                </select>
-            </div>
-            <div class="row mb-3">
-                <div class="col">
-                    <label class="form-label">Duration</label>
-                    <input type="number" id="duration" class="form-control" placeholder="30 min" required>
-                </div>
-                <div class="col">
-                    <label class="form-label">Distance</label>
-                    <input type="number" step="0.1" id="distance" class="form-control" placeholder="5.0 km">
-                </div>
-            </div>
-            <div class="mb-3">
-                <label class="form-label">Notes</label>
-                <textarea id="notes" class="form-control" placeholder="Optional"></textarea>
-            </div>
-            <button type="submit" class="btn btn-log w-100">Log Workout</button>
-        </form>
+        </div>
     </div>
 
-    <!-- Bottom Nav -->
-    <div class="bottom-nav text-center">
+    <!-- Bottom Nav (Mobile) -->
+    <div class="bottom-nav d-md-none text-center">
         <div class="row">
             <div class="col"><a href="index.html"><i class="fas fa-home"></i><br>Home</a></div>
             <div class="col"><a href="progress.html"><i class="fas fa-chart-line"></i><br>Progress</a></div>
-            <div class="col"><a href="dashboard.html" class="active"><i class="fas fa-dumbbell"></i><br>Workouts</a></div>
+            <div class="col"><a href="add_activity.html" class="active"><i class="fas fa-dumbbell"></i><br>Workouts</a></div>
             <div class="col"><a href="profile.html"><i class="fas fa-user"></i><br>Profile</a></div>
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/api.js"></script>
     <script>
-        document.getElementById('date').valueAsDate = new Date();
+        // Auth check
+        if (!localStorage.getItem('access_token')) window.location.href = 'index.html';
 
-        document.getElementById('workoutForm').addEventListener('submit', async (e) => {
+        // Form submit (add apiPost later)
+        document.getElementById('addActivityForm').addEventListener('submit', async (e) => {
             e.preventDefault();
-            const workout = {
-                date: document.getElementById('date').value,
-                type: document.getElementById('type').value,
-                duration_minutes: parseInt(document.getElementById('duration').value),
-                distance_km: parseFloat(document.getElementById('distance').value) || null,
-                notes: document.getElementById('notes').value || ''
-            };
-
-            try {
-                await apiPost('/api/activities/', workout);
-                alert('Workout logged!');
-                window.location.href = 'dashboard.html';
-            } catch (err) {
-                alert('Error logging workout');
-            }
+            // Collect form data and apiPost('/api/activities/', data)
+            alert('Workout saved!');  // Placeholder
         });
     </script>
 </body>
