--- a/front_end/index.html
+++ b/front_end/index.html
@@ -4,50 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FitTrack - Login</title>
-
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Your custom styles (keep if you have overrides) -->
     <link rel="stylesheet" href="assets/css/styles.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
         body {
-            background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.6)), url('https://media.istockphoto.com/id/1326480457/photo/working-out-man-training-legs-and-core-ab-workout-doing-lunge-twist-exercise-with-medicine.jpg?s=612x612&w=0&k=20&c=4WgHty6gNkJpQ_nuOoKT5FdY0HOc9jvK4Tb4vC_ddWk=') center/cover no-repeat;
-            height: 100vh;
+            background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.6)), url('https://media.istockphoto.com/id/1326480457/photo/working-out-man-training-legs-and-core-ab-workout-doing-lunge-twist-exercise-with-medicine.jpg?s=612x612&w=0&k=20&c=4WgHty6gNkJpQ_nuOoKT5FdY0HOc9jvK4Tb4vC_ddWk=') center/cover no-repeat fixed;
+            min-height: 100vh;
             margin: 0;
             display: flex;
             align-items: center;
             justify-content: center;
             font-family: 'Arial', sans-serif;
         }
+        .login-container {
+            width: 90%;
+            max-width: 420px;
+        }
         .login-card {
             background: white;
             border-radius: 16px;
             overflow: hidden;
-            box-shadow: 0 15px 35px rgba(0,0,0,0.3);
-            max-width: 420px;
-            width: 90%;
+            box-shadow: 0 15px 35px rgba(0,0,0,0.4);
         }
         .hero-section {
             background: #007bff;
             color: white;
             text-align: center;
-            padding: 30px 20px;
+            padding: 40px 20px;
         }
         .logo {
-            font-size: 36px;
+            font-size: 48px;
             font-weight: bold;
         }
         .logo span {
-            color: #28a745; /* Green check */
+            color: #28a745;
         }
         .tagline {
-            font-size: 24px;
-            margin: 15px 0 5px;
+            font-size: 28px;
+            margin: 10px 0;
         }
         .subtitle {
-            font-size: 16px;
+            font-size: 18px;
             opacity: 0.9;
         }
         .form-section {
@@ -56,7 +54,7 @@
         .btn-login {
             background: #007bff;
             border: none;
-            padding: 12px;
+            padding: 15px;
             font-size: 18px;
         }
         .btn-login:hover {
@@ -65,94 +63,100 @@
         #error {
             min-height: 24px;
         }
+
+        /* Desktop adjustments */
+        @media (min-width: 768px) {
+            .login-container {
+                max-width: 500px;
+            }
+            .hero-section {
+                padding: 60px 40px;
+            }
+            .logo { font-size: 60px; }
+            .tagline { font-size: 36px; }
+            .subtitle { font-size: 22px; }
+            .form-section { padding: 60px; }
+        }
     </style>
 </head>
 <body>
 
-<div class="login-card">
-    <!-- Hero Section with Logo and Tagline -->
-    <div class="hero-section">
-        <div class="logo">Fit<span>✔</span>Track</div>
-        <div class="tagline">PUSH FURTHER. TRACK BETTER.</div>
-        <div class="subtitle">YOUR JOURNEY TO PEAK PERFORMANCE STARTS NOW.</div>
-    </div>
+<div class="login-container">
+    <div class="login-card">
+        <!-- Hero Section -->
+        <div class="hero-section">
+            <div class="logo">Fit<span>✔</span>Track</div>
+            <div class="tagline">PUSH FURTHER. TRACK BETTER.</div>
+            <div class="subtitle">YOUR JOURNEY TO PEAK PERFORMANCE STARTS NOW.</div>
+        </div>
 
-    <!-- Login Form -->
-    <div class="form-section">
-        <h3 class="text-center mb-4">Login</h3>
-
-        <form onsubmit="loginUser(event)">
-    <div class="mb-3">
-        <input id="username" class="form-control form-control-lg"
-               placeholder="Username" required>
-    </div>
-
-    <div class="mb-3">
-        <input id="password" type="password"
-               class="form-control form-control-lg"
-               placeholder="Password" required>
-    </div>
-
-    <button type="submit" class="btn btn-primary btn-login w-100">
-        Login
-    </button>
-
-    <p id="error" class="text-danger text-center mt-3 mb-0"></p>
-</form>
-
-
-        <div class="text-center mt-4">
-            <small>Don't have an account? <a href="sign_up.html">Sign up</a></small>
+        <!-- Login Form -->
+        <div class="form-section">
+            <h3 class="text-center mb-4">Login</h3>
+            <form onsubmit="loginUser(event)">
+                <div class="mb-3">
+                    <input id="username" class="form-control form-control-lg" placeholder="Username" required>
+                </div>
+                <div class="mb-3">
+                    <input id="password" type="password" class="form-control form-control-lg" placeholder="Password" required>
+                </div>
+                <button type="submit" class="btn btn-primary btn-login w-100">Login</button>
+                <p id="error" class="text-danger text-center mt-3 mb-0"></p>
+            </form>
+            <div class="text-center mt-4">
+                <small>Don't have an account? <a href="sign_up.html">Sign up</a></small>
+            </div>
         </div>
     </div>
 </div>
 
-<!-- Your existing auth.js for real login logic -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/auth.js"></script>
 <script src="assets/js/api.js"></script>
 <script>
-// Fallback login function if auth.js doesn't load
-async function loginUser(event) {
-    event.preventDefault();
-
-    const username = document.getElementById('username').value.trim();
-    const password = document.getElementById('password').value;
-    const errorEl = document.getElementById('error');
-
-    if (!username || !password) {
-        errorEl.textContent = 'Please enter both username and password';
-        return;
+    // If already logged in, redirect to dashboard
+    if (localStorage.getItem('access_token')) {
+        window.location.href = 'dashboard.html';  // or progress.html / index after login
     }
 
-    errorEl.textContent = '';  // Clear old errors
+    async function loginUser(event) {
+        event.preventDefault();
+        const username = document.getElementById('username').value.trim();
+        const password = document.getElementById('password').value;
+        const errorEl = document.getElementById('error');
 
-    try {
-        const response = await fetch('https://fittrack-api-7b9k.onrender.com/api/token/', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ username, password })
-        });
-
-        if (!response.ok) {
-            if (response.status === 401) {
-                throw new Error('Invalid username or password');
-            }
-            throw new Error(`Login failed (${response.status})`);
+        if (!username || !password) {
+            errorEl.textContent = 'Please enter both username and password';
+            return;
         }
 
-        const data = await response.json();
-        localStorage.setItem('access_token', data.access);
-        localStorage.setItem('refresh_token', data.refresh || '');
+        errorEl.textContent = '';
 
-        // Redirect to your dashboard page
-        window.location.href = 'dashboard.html';  // Or whatever your main page is
-    } catch (err) {
-        console.error(err);
-        errorEl.textContent = err.message || 'Login failed – check connection or credentials';
+        try {
+            const response = await fetch('https://fittrack-api-7b9k.onrender.com/api/token/', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ username, password })
+            });
+
+            if (!response.ok) {
+                if (response.status === 401) {
+                    throw new Error('Invalid username or password');
+                }
+                throw new Error(`Login failed (${response.status})`);
+            }
+
+            const data = await response.json();
+            localStorage.setItem('access_token', data.access);
+            localStorage.setItem('refresh_token', data.refresh || '');
+
+            window.location.href = 'dashboard.html';  // Change to your main logged-in page
+        } catch (err) {
+            console.error(err);
+            errorEl.textContent = err.message || 'Login failed – check connection or credentials';
+        }
     }
-}
 </script>
-
 
 </body>
 </html>
