--- a/front_end/profile.html
+++ b/front_end/profile.html
@@ -10,6 +10,9 @@
     <style>
         body {
             background: #f8f9fa;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
         }
         .header {
             background: white;
@@ -25,23 +28,19 @@
         .logo span {
             color: #28a745;
         }
-        .profile-header {
-            text-align: center;
-            margin: 20px;
-        }
         .profile-photo {
             width: 100px;
+            height: 100px;
             border-radius: 50%;
-            border: 2px solid #007bff;
+            border: 4px solid #007bff;
+            object-fit: cover;
         }
-        .accordion-button {
-            background: #f0f4f8;
-            border-radius: 12px;
-            margin-bottom: 10px;
+        .main-content {
+            flex: 1;
+            padding-bottom: 70px; /* Space for bottom nav on mobile */
         }
-        .accordion-button:not(.collapsed) {
-            background: #e2f1ff;
-        }
+
+        /* Bottom Nav: Mobile only */
         .bottom-nav {
             position: fixed;
             bottom: 0;
@@ -49,6 +48,7 @@
             background: white;
             box-shadow: 0 -2px 10px rgba(0,0,0,0.1);
             padding: 10px 0;
+            z-index: 1000;
         }
         .bottom-nav a {
             color: #6c757d;
@@ -61,75 +61,143 @@
         .bottom-nav i {
             font-size: 24px;
         }
+
+        /* Sidebar Nav: Desktop only */
+        .sidebar {
+            width: 250px;
+            background: white;
+            height: 100vh;
+            position: fixed;
+            left: 0;
+            top: 0;
+            padding-top: 100px;
+            box-shadow: 2px 0 10px rgba(0,0,0,0.1);
+        }
+        .sidebar a {
+            display: block;
+            padding: 15px 20px;
+            color: #6c757d;
+            text-decoration: none;
+            font-size: 16px;
+        }
+        .sidebar a.active {
+            background: #e2f1ff;
+            color: #007bff;
+            border-left: 4px solid #007bff;
+        }
+        .sidebar i {
+            margin-right: 10px;
+        }
+
+        /* Media Queries for Responsiveness */
+        @media (max-width: 767px) { /* Mobile */
+            .sidebar { display: none; } /* Hide sidebar */
+            .main-content { margin-left: 0; }
+            .profile-photo { width: 80px; height: 80px; }
+        }
+
+        @media (min-width: 768px) { /* Laptop/Desktop */
+            .bottom-nav { display: none; } /* Hide bottom nav */
+            .main-content {
+                margin-left: 250px; /* Space for sidebar */
+                padding: 40px;
+                padding-bottom: 0;
+            }
+            .profile-photo { width: 150px; height: 150px; }
+            .profile-header h5 { font-size: 28px; }
+            .profile-header p { font-size: 18px; }
+            .accordion { max-width: 800px; margin: 0 auto; }
+        }
+
+        @media (min-width: 1200px) { /* Extra large screens */
+            .main-content { padding: 60px; }
+        }
     </style>
 </head>
 <body>
 
-    <!-- Header -->
-    <div class="header">
-        <div class="logo">Fit<span>✔</span>Track</div>
-        <h4>Profile</h4>
+    <!-- Sidebar Navigation (Visible on Laptop+) -->
+    <div class="sidebar d-none d-md-block">
+        <div class="text-center mb-5">
+            <img src="https://placehold.co/100x100" alt="Profile" class="profile-photo mb-3">
+            <h5>DAVID MUSYOKA</h5>
+            <p>DAVIDNGUMBAU29@GMAIL.COM</p>
+        </div>
+        <a href="index.html"><i class="fas fa-home"></i> Home</a>
+        <a href="progress.html"><i class="fas fa-chart-line"></i> Progress</a>
+        <a href="add_activity.html"><i class="fas fa-dumbbell"></i> Workouts</a>
+        <a href="profile.html" class="active"><i class="fas fa-user"></i> Profile</a>
     </div>
 
-    <!-- Profile Header -->
-    <div class="profile-header">
-        <img src="https://placehold.co/100x100" alt="Profile Photo" class="profile-photo">
-        <h5>DAVID MUSYOKA</h5>
-        <p>DAVIDNGUMBAU29@GMAIL.COM</p>
-    </div>
+    <!-- Main Content -->
+    <div class="main-content">
+        <!-- Mobile Header -->
+        <div class="header d-md-none">
+            <div class="logo">Fit<span>✔</span>Track</div>
+            <h4>Profile</h4>
+        </div>
 
-    <!-- Accordion -->
-    <div class="container">
-        <div class="accordion" id="profileAccordion">
-            <div class="accordion-item">
-                <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#personal">
-                        <i class="fas fa-user me-2 text-primary"></i> Personal Details
-                    </button>
-                </h2>
-                <div id="personal" class="accordion-collapse collapse">
-                    <div class="accordion-body">
-                        Name: David Musyoka<br>
-                        Email: davidngumbau29@gmail.com<br>
-                        Joined: December 2025
+        <!-- Profile Header (Mobile only - on desktop it's in sidebar) -->
+        <div class="profile-header text-center d-md-none">
+            <img src="https://placehold.co/100x100" alt="Profile Photo" class="profile-photo">
+            <h5>DAVID MUSYOKA</h5>
+            <p>DAVIDNGUMBAU29@GMAIL.COM</p>
+        </div>
+
+        <!-- Accordion Content -->
+        <div class="container mt-4">
+            <div class="accordion" id="profileAccordion">
+                <!-- Your accordion items remain the same -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#personal">
+                            <i class="fas fa-user me-2 text-primary"></i> Personal Details
+                        </button>
+                    </h2>
+                    <div id="personal" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            Name: David Musyoka<br>
+                            Email: davidngumbau29@gmail.com<br>
+                            Joined: December 2025
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="accordion-item">
-                <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#stats">
-                        <i class="fas fa-chart-bar me-2 text-orange"></i> Statistics
-                    </button>
-                </h2>
-                <div id="stats" class="accordion-collapse collapse">
-                    <div class="accordion-body">
-                        Total Workouts: 15<br>
-                        Total Distance: 45 km<br>
-                        Average Duration: 35 min
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#stats">
+                            <i class="fas fa-chart-bar me-2 text-primary"></i> Statistics
+                        </button>
+                    </h2>
+                    <div id="stats" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            Total Workouts: 15<br>
+                            Total Distance: 45 km<br>
+                            Average Duration: 35 min
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="accordion-item">
-                <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#settings">
-                        <i class="fas fa-cog me-2 text-primary"></i> Settings
-                    </button>
-                </h2>
-                <div id="settings" class="accordion-collapse collapse">
-                    <div class="accordion-body">
-                        Change Password<br>
-                        Unit Preferences (km/miles)<br>
-                        Notification Settings
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#settings">
+                            <i class="fas fa-cog me-2 text-primary"></i> Settings
+                        </button>
+                    </h2>
+                    <div id="settings" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            Change Password<br>
+                            Unit Preferences (km/miles)<br>
+                            Notification Settings
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Bottom Nav -->
-    <div class="bottom-nav text-center">
+    <!-- Bottom Nav (Visible on Mobile only) -->
+    <div class="bottom-nav d-md-none text-center">
         <div class="row">
             <div class="col"><a href="index.html"><i class="fas fa-home"></i><br>Home</a></div>
             <div class="col"><a href="progress.html"><i class="fas fa-chart-line"></i><br>Progress</a></div>
@@ -137,20 +205,31 @@
             <div class="col"><a href="profile.html" class="active"><i class="fas fa-user"></i><br>Profile</a></div>
         </div>
     </div>
-    <script src="assets/js/api.js"></script>
-<script>
-    async function loadProfile() {
-        try {
-            const user = await apiGet('/profile/');
-            document.querySelector('h5').textContent = `${user.first_name} ${user.last_name}`.trim() || user.username;
-            document.querySelector('p').textContent = user.email;
-            // Fill accordion fields if needed
-        } catch (err) {
-            window.location.href = 'index.html';  // Redirect to login if not authenticated
-        }
-    }
-    loadProfile();
-</script>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/api.js"></script>
+    <script>
+        async function loadProfile() {
+            try {
+                const user = await apiGet('/profile/');
+                // Update name/email in mobile header
+                const mobileName = document.querySelector('.d-md-none h5');
+                const mobileEmail = document.querySelector('.d-md-none p');
+                if (mobileName) mobileName.textContent = `${user.first_name} ${user.last_name}`.trim() || user.username;
+                if (mobileEmail) mobileEmail.textContent = user.email;
+
+                // Update sidebar (desktop)
+                const sidebarName = document.querySelector('.sidebar h5');
+                const sidebarEmail = document.querySelector('.sidebar p');
+                if (sidebarName) sidebarName.textContent = `${user.first_name} ${user.last_name}`.trim() || user.username;
+                if (sidebarEmail) sidebarEmail.textContent = user.email;
+
+                // Fill accordion if you add dynamic data later
+            } catch (err) {
+                window.location.href = 'index.html';  // Redirect to login
+            }
+        }
+        loadProfile();
+    </script>
 </body>
 </html>
