--- a/front_end/training_plan.html
+++ b/front_end/training_plan.html
@@ -8,141 +8,115 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
-        body {
-            background: #f8f9fa;
-            font-family: 'Arial', sans-serif;
-        }
-        .header {
-            background: white;
-            padding: 20px;
-            text-align: center;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
-        .logo {
-            font-size: 32px;
-            font-weight: bold;
-            color: #007bff;
-        }
-        .logo span {
-            color: #28a745;
-        }
-        .plan-container {
-            margin: 20px;
-            text-align: center;
-        }
-        .clipboard-icon {
-            width: 100px;
-            margin-bottom: 10px;
-        }
-        .badge-start {
-            background: #ffe69c;
-            color: #b45309;
-            padding: 8px 20px;
-            border-radius: 50px;
-            font-weight: bold;
-            font-size: 16px;
-        }
-        .schedule-title {
-            font-weight: bold;
-            margin: 30px 0 20px;
-            color: #333;
-        }
-        .schedule-item {
-            display: flex;
-            align-items: center;
-            background: #f0f4f8;
-            border-radius: 12px;
-            padding: 15px;
-            margin-bottom: 15px;
-        }
-        .item-icon {
-            font-size: 30px;
-            margin-right: 15px;
-            padding: 10px;
-            border-radius: 50%;
-            color: white;
-        }
-        .strength-icon { background: #007bff; }
-        .intervals-icon { background: #ff8c00; }
-        .cycling-icon { background: #007bff; }
-        .day {
-            font-size: 14px;
-            color: #6c757d;
-        }
-        .activity {
-            font-weight: bold;
-            font-size: 18px;
-        }
-        .bottom-nav {
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            background: white;
-            box-shadow: 0 -2px 10px rgba(0,0,0,0.1);
-            padding: 10px 0;
-        }
-        .bottom-nav a {
-            color: #6c757d;
-            text-decoration: none;
-            font-size: 12px;
-        }
-        .bottom-nav a.active {
-            color: #007bff;
-        }
-        .bottom-nav i {
-            font-size: 24px;
-        }
+        body { background: #f8f9fa; min-height: 100vh; display: flex; flex-direction: column; }
+        .header { background: white; padding: 20px; text-align: center; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
+        .logo { font-size: 32px; font-weight: bold; color: #007bff; }
+        .logo span { color: #28a745; }
+        .main-content { flex: 1; padding-bottom: 70px; }
+        .plan-card { background: white; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); padding: 20px; }
+
+        /* Bottom Nav & Sidebar */
+        .bottom-nav { position: fixed; bottom: 0; width: 100%; background: white; box-shadow: 0 -2px 10px rgba(0,0,0,0.1); padding: 10px 0; z-index: 1000; }
+        .bottom-nav a { color: #6c757d; text-decoration: none; font-size: 12px; }
+        .bottom-nav a.active { color: #007bff; }
+        .bottom-nav i { font-size: 24px; }
+
+        .sidebar { width: 250px; background: white; height: 100vh; position: fixed; left: 0; top: 0; padding-top: 100px; box-shadow: 2px 0 10px rgba(0,0,0,0.1); }
+        .sidebar a { display: block; padding: 15px 20px; color: #6c757d; text-decoration: none; font-size: 16px; }
+        .sidebar a.active { background: #e2f1ff; color: #007bff; border-left: 4px solid #007bff; }
+        .sidebar i { margin-right: 10px; }
+
+        @media (max-width: 767px) { .sidebar { display: none; } .main-content { margin-left: 0; padding: 20px; } }
+        @media (min-width: 768px) { .bottom-nav { display: none; } .main-content { margin-left: 250px; padding: 40px; } }
+        @media (min-width: 1200px) { .main-content { padding: 60px; } }
     </style>
 </head>
 <body>
 
-    <!-- Header -->
-    <div class="header">
-        <div class="logo">Fit<span>✔</span>Track</div>
-        <h4>Training Plan</h4>
+    <!-- Sidebar (Desktop) -->
+    <div class="sidebar d-none d-md-block">
+        <div class="text-center mb-5">
+            <img src="https://placehold.co/100x100" alt="Profile" class="rounded-circle mb-3" width="100">
+            <h5>DAVID MUSYOKA</h5>
+            <p>DAVIDNGUMBAU29@GMAIL.COM</p>
+        </div>
+        <a href="index.html"><i class="fas fa-home"></i> Home</a>
+        <a href="progress.html"><i class="fas fa-chart-line"></i> Progress</a>
+        <a href="add_activity.html"><i class="fas fa-dumbbell"></i> Workouts</a>
+        <a href="training_plan.html" class="active"><i class="fas fa-calendar-alt"></i> Training Plan</a>
+        <a href="profile.html"><i class="fas fa-user"></i> Profile</a>
     </div>
 
-    <!-- Training Plan Content -->
-    <div class="plan-container">
-        <img src="https://media.istockphoto.com/id/1432945630/vector/clipboard-icon-set-checklist-on-the-clipboard-line-icon-with-checkmarks-checklist-document.jpg?s=612x612&w=0&k=20&c=M7qGvl4H4WYngBZnxzjiJ_kOTFolcX7u36Ke2oImeqU=" alt="Clipboard" class="clipboard-icon">
-        <div class="badge-start">STARTING IN 2 DAYS</div>
-
-        <h5 class="schedule-title">Weekly Schedule</h5>
-
-        <div class="schedule-item">
-            <i class="fas fa-dumbbell item-icon strength-icon"></i>
-            <div class="schedule-text">
-                <div class="day">Monday</div>
-                <div class="activity">Strength</div>
-            </div>
+    <!-- Main Content -->
+    <div class="main-content">
+        <!-- Mobile Header -->
+        <div class="header d-md-none">
+            <div class="logo">Fit<span>✔</span>Track</div>
+            <h4>Training Plan</h4>
         </div>
 
-        <div class="schedule-item">
-            <i class="fas fa-running item-icon intervals-icon"></i>
-            <div class="schedule-text">
-                <div class="day">Tuesday</div>
-                <div class="activity">Intervals</div>
-            </div>
-        </div>
+        <div class="container">
+            <div class="plan-card">
+                <h3 class="text-center mb-4">Your Weekly Training Plan</h3>
+                <ul class="nav nav-tabs mb-4" id="planTabs" role="tablist">
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#beginner">Beginner Running</button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link" data-bs-toggle="tab" data-bs-target="#strength">Strength Building</button>
+                    </li>
+                </ul>
 
-        <div class="schedule-item">
-            <i class="fas fa-bicycle item-icon cycling-icon"></i>
-            <div class="schedule-text">
-                <div class="day">Thursday</div>
-                <div class="activity">Cycling</div>
+                <div class="tab-content">
+                    <div class="tab-pane fade show active" id="beginner">
+                        <table class="table table-bordered">
+                            <thead><tr><th>Day</th><th>Workout</th><th>Duration/Distance</th></tr></thead>
+                            <tbody>
+                                <tr><td>Monday</td><td>Easy Run</td><td>30 min</td></tr>
+                                <tr><td>Tuesday</td><td>Rest or Yoga</td><td>-</td></tr>
+                                <tr><td>Wednesday</td><td>Interval Run</td><td>4x400m</td></tr>
+                                <tr><td>Thursday</td><td>Rest</td><td>-</td></tr>
+                                <tr><td>Friday</td><td>Easy Run</td><td>35 min</td></tr>
+                                <tr><td>Saturday</td><td>Long Run</td><td>5 km</td></tr>
+                                <tr><td>Sunday</td><td>Rest</td><td>-</td></tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="tab-pane fade" id="strength">
+                        <table class="table table-bordered">
+                            <thead><tr><th>Day</th><th>Focus</th><th>Exercises</th></tr></thead>
+                            <tbody>
+                                <tr><td>Monday</td><td>Upper Body</td><td>Push-ups, Pull-ups, Bench Press</td></tr>
+                                <tr><td>Tuesday</td><td>Lower Body</td><td>Squats, Lunges, Deadlifts</td></tr>
+                                <tr><td>Wednesday</td><td>Rest</td><td>-</td></tr>
+                                <tr><td>Thursday</td><td>Full Body</td><td>Circuit Training</td></tr>
+                                <tr><td>Friday</td><td>Core</td><td>Planks, Crunches</td></tr>
+                                <tr><td>Saturday</td><td>Cardio</td><td>Run or Cycle</td></tr>
+                                <tr><td>Sunday</td><td>Rest</td><td>-</td></tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
-    <!-- Bottom Navigation -->
-    <div class="bottom-nav text-center">
+    <!-- Bottom Nav (Mobile) -->
+    <div class="bottom-nav d-md-none text-center">
         <div class="row">
             <div class="col"><a href="index.html"><i class="fas fa-home"></i><br>Home</a></div>
-            <div class="col"><a href="progress.html" class="active"><i class="fas fa-chart-line"></i><br>Progress</a></div>
-            <div class="col"><a href="dashboard.html"><i class="fas fa-dumbbell"></i><br>Workouts</a></div>
+            <div class="col"><a href="progress.html"><i class="fas fa-chart-line"></i><br>Progress</a></div>
+            <div class="col"><a href="add_activity.html"><i class="fas fa-dumbbell"></i><br>Workouts</a></div>
+            <div class="col"><a href="training_plan.html" class="active"><i class="fas fa-calendar-alt"></i><br>Plan</a></div>
             <div class="col"><a href="profile.html"><i class="fas fa-user"></i><br>Profile</a></div>
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/api.js"></script>
+    <script>
+        if (!localStorage.getItem('access_token')) window.location.href = 'index.html';
+        // Future: Fetch user-specific plan from API and populate table
+    </script>
 </body>
 </html>
